--- a/index.html
+++ b/index.html
@@ -1,11 +1,37 @@
 <!DOCTYPE HTML>
 <html lang="es">
   <head>
-    <meta charset="UTF-8">
     <title>Lumarc</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <script src="js/jquery.js"></script>
+    <script src="bootstrap/js/bootstrap.js"></script>
     <link href="images/logo.ico" rel="shortcut icon">
   </head>
   <body>
-    Hello World!
+    <div class="container-fluid">
+      <nav class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <a class="navbar-brand" href="#"><img class="logo" src="images/lumarc-logo.jpg" alt="Lumarc"></img></a>
+          </div>
+          <div>
+            <ul class="nav navbar-nav navbar-right">
+              <li class><a href="#">Home</a></li>
+              <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Software<span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  <li><a href="#">Windows</a></li>
+                  <li><a href="#">Apple</a></li>
+                  <li><a href="#">Linux</a></li>
+                </ul>
+              </li>
+              <li class><a href="#">Music</a></li>
+              <li class><a href="#">Contact Us</a></li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </div>
   </body>
 </html>
