--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container-fluid">
           <div class="navbar-header">
-            <a class="navbar-brand" href="#"><img class="logo" src="images/lumarc-logo.jpg" alt="Lumarc"></img></a>
+            <a class="navbar-brand" href="#"><img id="logo" src="images/lumarc-logo.jpg" alt="Lumarc"></img></a>
           </div>
           <div>
             <ul class="nav navbar-nav navbar-right">
