--- a/index.html
+++ b/index.html
@@ -3,35 +3,76 @@
   <head>
     <title>Lumarc</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
-    <link rel="stylesheet" href="css/styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="js/jquery.js"></script>
-    <script src="bootstrap/js/bootstrap.js"></script>
-    <link href="images/logo.ico" rel="shortcut icon">
+    <script src="bootstrap/js/bootstrap.min.js"></script>
+    <script src="js/main.js"></script>
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
+    <link href="images/logo-black-small.png" rel="shortcut icon">
   </head>
-  <body>
-    <div class="container-fluid">
-      <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container-fluid">
-          <div class="navbar-header">
-            <a class="navbar-brand" href="#"><img id="logo" src="images/lumarc-logo.jpg" alt="Lumarc"></img></a>
-          </div>
-          <div>
-            <ul class="nav navbar-nav navbar-right">
-              <li class><a href="#">Home</a></li>
-              <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Software<span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                  <li><a href="#">Windows</a></li>
-                  <li><a href="#">Apple</a></li>
-                  <li><a href="#">Linux</a></li>
-                </ul>
-              </li>
-              <li class><a href="#">Music</a></li>
-              <li class><a href="#">Contact Us</a></li>
-            </ul>
-          </div>
+  <body data-spy="scroll" data-target=".navbar" data-offset="50">
+      <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
+        <a class="navbar-brand"><img id="logo" src="images/logo-white.png"></img></a>
+        <button class="navbar-toggler" data-toggle="collapse" data-target="#myNavbar">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="myNavbar">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" href="#content1">Nosotros</a>
+            </li>
+
+            <li class="nav-item" >
+              <a class="nav-link" href="#content2">Servicios</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#content3">Contacto</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" data-target="dropdown_target">
+                Productos
+                <span class="caret"></span>
+              </a>
+            <div class="dropdown-menu" aria-labelledby="dropdown_target">
+              <a class="dropdown-item" href="#content41">Marcos</a>
+              <a class="dropdown-item" href="#content42">Cristales</a>
+              <a class="dropdown-item" href="#content43">Cuadros</a>
+            </div>
+            </li>
+          </ul>
         </div>
       </nav>
-    </div>
+      <!--<img src="images/shop-1.jpg" class="img-fluid"></img>-->
+      <div id="content1" class="container-fluid bg-success" style="padding-top: 70px; padding-bottom: 70px;">
+        <h1>Nosotros</h1>
+        <p>Esto es una prueba</p>
+        <p>Esto es una prueba</p>
+      </div>
+      <div id="content2" class="container-fluid bg-warning" style="padding-top: 70px; padding-bottom: 70px;">
+        <h1>Servicios</h1>
+        <p>Esto es una prueba</p>
+        <p>Esto es una prueba</p>
+      </div>
+      <div id="content3" class="container-fluid bg-primary" style="padding-top: 70px; padding-bottom: 70px;">
+        <h1>Contacto</h1>
+        <p>Esto es una prueba</p>
+        <p>Esto es una prueba</p>
+      </div>
+      <div id="content41" class="container-fluid bg-danger" style="padding-top: 70px; padding-bottom: 70px;">
+        <h1>Marcos</h1>
+        <p>Esto es una prueba</p>
+        <p>Esto es una prueba</p>
+      </div>
+      <div id="content42" class="container-fluid bg-info" style="padding-top: 70px; padding-bottom: 70px;">
+        <h1>Cristales</h1>
+        <p>Esto es una prueba</p>
+        <p>Esto es una prueba</p>
+      </div>
+      <div id="content43" class="container-fluid bg-secondary" style="padding-top: 70px; padding-bottom: 70px;">
+        <h1>Cuadros</h1>
+        <p>Esto es una prueba</p>
+        <p>Esto es una prueba</p>
+      </div>
   </body>
 </html>
