--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="js/main.js"></script>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
-    <link href="images/logo-black-small.png" rel="shortcut icon">
+    <link href="images/logo-black-icon.png" rel="shortcut icon">
   </head>
   <body data-spy="scroll" data-target=".navbar" data-offset="50">
       <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
@@ -22,13 +22,6 @@
             <li class="nav-item">
               <a class="nav-link active" href="#content1">Nosotros</a>
             </li>
-
-            <li class="nav-item" >
-              <a class="nav-link" href="#content2">Servicios</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#content3">Contacto</a>
-            </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" data-target="dropdown_target">
                 Productos
@@ -40,12 +33,36 @@
               <a class="dropdown-item" href="#content43">Cuadros</a>
             </div>
             </li>
+            <li class="nav-item" >
+              <a class="nav-link" href="#content2">Servicios</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#content3">Contacto</a>
+            </li>
+
           </ul>
         </div>
       </nav>
       <!--<img src="images/shop-1.jpg" class="img-fluid"></img>-->
-      <div id="content1" class="container-fluid bg-success" style="padding-top: 70px; padding-bottom: 70px;">
+      <div id="content1" class="container-fluid bg-success">
+        <br><br>
         <h1>Nosotros</h1>
+        <p>Esto es una prueba</p>
+        <p>Esto es una prueba</p>
+        <img  class="img-fluid" src="images/shop-0.jpg"></img>
+      </div>
+      <div id="content41" class="container-fluid bg-danger" style="padding-top: 70px; padding-bottom: 70px;">
+          <h1>Marcos</h1>
+          <p>Esto es una prueba</p>
+          <p>Esto es una prueba</p>
+      </div>
+      <div id="content42" class="container-fluid bg-info" style="padding-top: 70px; padding-bottom: 70px;">
+        <h1>Cristales</h1>
+        <p>Esto es una prueba</p>
+        <p>Esto es una prueba</p>
+      </div>
+      <div id="content43" class="container-fluid bg-secondary" style="padding-top: 70px; padding-bottom: 70px;">
+        <h1>Cuadros</h1>
         <p>Esto es una prueba</p>
         <p>Esto es una prueba</p>
       </div>
@@ -56,21 +73,6 @@
       </div>
       <div id="content3" class="container-fluid bg-primary" style="padding-top: 70px; padding-bottom: 70px;">
         <h1>Contacto</h1>
-        <p>Esto es una prueba</p>
-        <p>Esto es una prueba</p>
-      </div>
-      <div id="content41" class="container-fluid bg-danger" style="padding-top: 70px; padding-bottom: 70px;">
-        <h1>Marcos</h1>
-        <p>Esto es una prueba</p>
-        <p>Esto es una prueba</p>
-      </div>
-      <div id="content42" class="container-fluid bg-info" style="padding-top: 70px; padding-bottom: 70px;">
-        <h1>Cristales</h1>
-        <p>Esto es una prueba</p>
-        <p>Esto es una prueba</p>
-      </div>
-      <div id="content43" class="container-fluid bg-secondary" style="padding-top: 70px; padding-bottom: 70px;">
-        <h1>Cuadros</h1>
         <p>Esto es una prueba</p>
         <p>Esto es una prueba</p>
       </div>
