--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="myNavbar">
-          <ul class="navbar-nav">
+          <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-              <a class="nav-link active" href="#content1">Nosotros</a>
+              <a class="nav-link active nav-hide" href="#content1">Nosotros</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" data-target="dropdown_target">
@@ -28,30 +28,27 @@
                 <span class="caret"></span>
               </a>
             <div class="dropdown-menu" aria-labelledby="dropdown_target">
-              <a class="dropdown-item" href="#content41">Marcos</a>
-              <a class="dropdown-item" href="#content42">Cristales</a>
-              <a class="dropdown-item" href="#content43">Cuadros</a>
+              <a class="dropdown-item nav-hide" href="#content41">Marcos</a>
+              <a class="dropdown-item nav-hide" href="#content42">Cristales</a>
+              <a class="dropdown-item nav-hide" href="#content43">Cuadros</a>
             </div>
             </li>
             <li class="nav-item" >
-              <a class="nav-link" href="#content2">Servicios</a>
+              <a class="nav-link nav-hide" href="#content2">Servicios</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#content3">Contacto</a>
+              <a class="nav-link nav-hide" href="#content3">Contacto</a>
             </li>
 
           </ul>
         </div>
       </nav>
       <!--<img src="images/shop-1.jpg" class="img-fluid"></img>-->
-      <div id="content1" class="container-fluid bg-success">
-        <br><br>
-        <h1>Nosotros</h1>
-        <p>Esto es una prueba</p>
-        <p>Esto es una prueba</p>
-        <img  class="img-fluid" src="images/shop-0.jpg"></img>
+      <div id="content0" class="full-width-image"></div>
+      <div id="content1" class="container-fluid bg-info" style="padding-top: 70px; padding-bottom: 70px;">
+        </div>
       </div>
-      <div id="content41" class="container-fluid bg-danger" style="padding-top: 70px; padding-bottom: 70px;">
+      <div id="content41" class="full-width-image-2" style="padding-top: 70px; padding-bottom: 70px;">
           <h1>Marcos</h1>
           <p>Esto es una prueba</p>
           <p>Esto es una prueba</p>
