--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="images/logo-black-icon.png" rel="shortcut icon">
   </head>
   <body data-spy="scroll" data-target=".navbar" data-offset="50">
-      <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
+      <nav class="navbar navbar-expand-md bg-black navbar-dark sticky-top">
         <a class="navbar-brand"><img id="logo" src="images/logo-white.png"></img></a>
         <button class="navbar-toggler" data-toggle="collapse" data-target="#myNavbar">
           <span class="navbar-toggler-icon"></span>
@@ -27,10 +27,10 @@
                 Productos
                 <span class="caret"></span>
               </a>
-            <div class="dropdown-menu" aria-labelledby="dropdown_target">
-              <a class="dropdown-item nav-hide" href="#content41">Marcos</a>
-              <a class="dropdown-item nav-hide" href="#content42">Cristales</a>
-              <a class="dropdown-item nav-hide" href="#content43">Cuadros</a>
+            <div class="dropdown-menu bg-dark" aria-labelledby="dropdown_target">
+              <a class="dropdown-item nav-hide bg-dark" href="#content41">Marcos</a>
+              <a class="dropdown-item nav-hide bg-dark" href="#content42">Cristales</a>
+              <a class="dropdown-item nav-hide bg-dark" href="#content43">Cuadros</a>
             </div>
             </li>
             <li class="nav-item" >
