--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <link href="images/logo-black-icon.png" rel="shortcut icon">
   </head>
   <body data-spy="scroll" data-target=".navbar" data-offset="50">
-      <nav class="navbar navbar-expand-md bg-black navbar-dark sticky-top">
-        <a class="navbar-brand"><img id="logo" src="images/logo-white.png"></img></a>
-        <button class="navbar-toggler" data-toggle="collapse" data-target="#myNavbar">
+      <nav class="navbar navbar-expand-md navbar-custom fixed-top" id="myNavbar">
+        <a class="navbar-brand" href="#content0"><img id="logo" src="images/logo-white.png"></img></a>
+        <button class="navbar-toggler custom-toggler" data-toggle="collapse" data-target="#myNavbar">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="myNavbar">
+        <div class="collapse navbar-collapse">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
               <a class="nav-link active nav-hide" href="#content1">Nosotros</a>
@@ -27,48 +27,49 @@
                 Productos
                 <span class="caret"></span>
               </a>
-            <div class="dropdown-menu bg-dark" aria-labelledby="dropdown_target">
-              <a class="dropdown-item nav-hide bg-dark" href="#content41">Marcos</a>
-              <a class="dropdown-item nav-hide bg-dark" href="#content42">Cristales</a>
-              <a class="dropdown-item nav-hide bg-dark" href="#content43">Cuadros</a>
+            <div class="dropdown-menu navbar-custom" aria-labelledby="dropdown_target">
+              <a class="dropdown-item nav-hide" href="#content21">Marcos</a>
+              <a class="dropdown-item nav-hide" href="#content22">Cristales</a>
+              <a class="dropdown-item nav-hide" href="#content23">Cuadros</a>
             </div>
             </li>
             <li class="nav-item" >
-              <a class="nav-link nav-hide" href="#content2">Servicios</a>
+              <a class="nav-link nav-hide" href="#content3">Servicios</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link nav-hide" href="#content3">Contacto</a>
+              <a class="nav-link nav-hide" href="#content4">Contacto</a>
             </li>
 
           </ul>
         </div>
       </nav>
       <!--<img src="images/shop-1.jpg" class="img-fluid"></img>-->
-      <div id="content0" class="full-width-image"></div>
-      <div id="content1" class="container-fluid bg-info" style="padding-top: 70px; padding-bottom: 70px;">
-        </div>
+      <div id="content0">
+        <img class="title" src="images/logo-white.png" />
+        <h2 class="subtitle">A su servicio desde 1988</h2>
       </div>
-      <div id="content41" class="full-width-image-2" style="padding-top: 70px; padding-bottom: 70px;">
-          <h1>Marcos</h1>
-          <p>Esto es una prueba</p>
-          <p>Esto es una prueba</p>
+      <div id="content1">
+        <h1 class="title">Nosotros</h1>
+        <h3 class="subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</h3>
       </div>
-      <div id="content42" class="container-fluid bg-info" style="padding-top: 70px; padding-bottom: 70px;">
-        <h1>Cristales</h1>
-        <p>Esto es una prueba</p>
-        <p>Esto es una prueba</p>
       </div>
-      <div id="content43" class="container-fluid bg-secondary" style="padding-top: 70px; padding-bottom: 70px;">
-        <h1>Cuadros</h1>
-        <p>Esto es una prueba</p>
-        <p>Esto es una prueba</p>
+      <div id="content21" style="padding-top: 70px; padding-bottom: 70px;">
+        <h1 class="title">Marcos</h1>
+        <h3 class="subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</h3>
       </div>
-      <div id="content2" class="container-fluid bg-warning" style="padding-top: 70px; padding-bottom: 70px;">
-        <h1>Servicios</h1>
-        <p>Esto es una prueba</p>
-        <p>Esto es una prueba</p>
+      <div id="content22" style="padding-top: 70px; padding-bottom: 70px;">
+        <h1 class="title">Cristales</h1>
+        <h3 class="subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</h3>
       </div>
-      <div id="content3" class="container-fluid bg-primary" style="padding-top: 70px; padding-bottom: 70px;">
+      <div id="content23" style="padding-top: 70px; padding-bottom: 70px;">
+        <h1 class="title">Cuadros</h1>
+        <h3 class="subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</h3>
+      </div>
+      <div id="content3" class="container-fluid" style="padding-top: 70px; padding-bottom: 70px;">
+        <h1 class="title">Servicios</h1>
+        <h3 class="subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</h3>
+      </div>
+      <div id="content4" class="container-fluid" style="padding-top: 70px; padding-bottom: 70px;">
         <h1>Contacto</h1>
         <p>Esto es una prueba</p>
         <p>Esto es una prueba</p>
