Fixed Navbar Bug

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
   <body data-spy="scroll" data-target=".navbar" data-offset="50">
       <nav class="navbar navbar-expand-md navbar-custom fixed-top" id="myNavbar">
         <a class="navbar-brand" href="#content0"><img id="logo" src="images/logo-white.png"></img></a>
-        <button class="navbar-toggler custom-toggler" data-toggle="collapse" data-target="#myNavbar">
+        <button class="navbar-toggler custom-toggler" data-toggle="collapse" data-target="#myNavbar2">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse">
+        <div class="collapse navbar-collapse" id="myNavbar2">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
               <a class="nav-link active nav-hide" href="#content1">Nosotros</a>
