--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <script src="js/jquery.js"></script>
     <script src="bootstrap/js/bootstrap.min.js"></script>
     <script src="js/main.js"></script>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/prebootstrap.css">
     <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="css/styles.css">
+
     <link href="images/logo-black-icon.png" rel="shortcut icon">
   </head>
   <body data-spy="scroll" data-target=".navbar" data-offset="50">
@@ -71,7 +73,11 @@
       </div>
       <div id="content4">
         <h1 class="title">Contacto</h1>
+        <div id="map"></div>
         <h3 class="subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</h3>
       </div>
+      <script async defer
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCtlEVbXTCyt11CEYuti_zCpYi3_lV-aXY&callback=initMap">
+      </script>
   </body>
 </html>
