--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
             <li class="nav-item">
               <a class="nav-link active nav-hide" href="#content1">Nosotros</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link active nav-hide" href="#content11">Equipo</a>
+            </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle bg-dark" href="#" data-toggle="dropdown" data-target="dropdown_target">
                 Productos
