--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="backPhoto"></div>
         <img class="title" src="images/logo-white.png" /></a>
         <h2 class="subtitle">A su servicio desde 1988</h2>
-        <a href="#content1"><img id="down" src="images/arrow-2.png"></img></a>
+        <a href="#content1"><img id="down" src="images/arrow-black.png"></img></a>
       </div>
       <div id="content1">
         <h1 id="titulo">Sobre Nosotros</h1>
@@ -66,10 +66,30 @@
         <p class="arti ml-5 pl-5 mr-5 pr-5">Nos encantará mostrarte todas las posibilidades y opciones a tu disposición, estamos convencidos de que encontrarás lo que estás buscando.</p>
         <p class="arti ml-5 pl-5 mr-5 pr-5">La meta principal de nuestra empresa es, sin duda, poder satisfacer todas las necesidades de nuestros clientes.</p>
       </div>
-      <div id="content11">
+      <div id="content11" class="align-items-center">
         <h1 id="titulo">Nuestro Equipo</h1>
-        <div class="photo"></div>
-      </div>
+        <div class="row ml-5 mr-5">
+          <div class="column">
+              <img src="images/manolo-1.jpg" style="width:100%">
+              <p class="title">Manolo</p>
+              <p class="subtitle">Fundador</p>
+          </div>
+          <div class="column">
+              <img src="images/lupe-1.jpg" style="width:100%">
+              <p class="title">Guadalupe</p>
+              <p class="subtitle">Cofundadora</p>
+          </div>
+          <div class="column">
+              <img src="images/manu-1.jpg" style="width:100%">
+              <p class="title">Manuel</p>
+              <p class="subtitle">Trabajador</p>
+          </div>
+          <div class="column">
+              <img src="images/manolito-1.jpg" style="width:100%">
+              <p class="title">Manolo</p>
+              <p class="subtitle">Trabajador</p>
+          </div>
+        </div>
       </div>
       <div id="content21">
         <h1 id="titulo">Marcos</h1>
