--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="js/jquery.js"></script>
     <script src="bootstrap/js/bootstrap.min.js"></script>
-    <script src="js/main.js"></script>
     <link rel="stylesheet" href="css/prebootstrap.css">
     <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="css/magnific.css">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/animate.css">
     <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+    <script src="./js/instafeed.min.js"></script>
+    <script src="js/magnific.min.js"></script>
+    <script src="js/main.js"></script>
     <link href="images/logo-black-icon.png" rel="shortcut icon">
   </head>
   <body data-spy="scroll" data-target=".navbar" data-offset="50">
@@ -27,6 +30,9 @@
             </li>
             <li class="nav-item">
               <a class="nav-link active nav-hide" href="#content11">Equipo</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active nav-hide" href="#content12">Proyectos</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle bg-dark" href="#" data-toggle="dropdown" data-target="dropdown_target">
@@ -89,6 +95,14 @@
               <p class="title">Manolo</p>
               <p class="subtitle">Trabajador</p>
           </div>
+        </div>
+      </div>
+      <div id="content12" class="align-items-center">
+        <h2 id="titulo">Nuestros Proyectos</h2>
+        <div class="container">
+
+          <div id="instafeed" class="row gallery"></div>
+
         </div>
       </div>
       <div id="content21">
