--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
             <div class="dropdown-menu navbar-dark bg-dark" aria-labelledby="dropdown_target">
               <a class="dropdown-item nav-hide" href="#content21">Marcos</a>
               <a class="dropdown-item nav-hide" href="#content22">Cristales</a>
-              <a class="dropdown-item nav-hide" href="#content23">Persianas</a>
+              <a class="dropdown-item nav-hide" href="#content23">Aluminios</a>
+              <a class="dropdown-item nav-hide" href="#content24">Persianas</a>
             </div>
             </li>
             <li class="nav-item" >
@@ -65,7 +66,7 @@
         <a href="#content1"><img id="down" src="images/arrow-black.png"></img></a>
       </div>
       <div id="content1">
-        <h1 id="titulo">Sobre Nosotros</h1>
+        <h1 id="titulo" class="ml-5 mr-5">Sobre Nosotros</h1>
         <div class="photo"></div>
         <p class="arti ml-5 pl-5 mr-5 pr-5">Somos una empresa de reconocido prestigio en nuestro sector.</p>
         <p class="arti ml-5 pl-5 mr-5 pr-5">Te ofrecemos una amplia gama de productos y servicios a unos precios muy competitivos y de la máxima calidad respaldados por un equipo que se caracteriza por su trato cordial y espíritu de servicio.</p>
@@ -73,7 +74,7 @@
         <p class="arti ml-5 pl-5 mr-5 pr-5">La meta principal de nuestra empresa es, sin duda, poder satisfacer todas las necesidades de nuestros clientes.</p>
       </div>
       <div id="content11" class="align-items-center">
-        <h1 id="titulo">Nuestro Equipo</h1>
+        <h1 id="titulo" class="ml-5 mr-5">Nuestro Equipo</h1>
         <div class="row ml-5 mr-5">
           <div class="column">
               <img src="images/manolo-1.jpg" style="width:100%">
@@ -97,9 +98,9 @@
           </div>
         </div>
       </div>
-      <div id="content12" class="align-items-center">
+      <div id="content12" class="align-items-center ml-5 mr-5">
         <h2 id="titulo">Nuestros Proyectos</h2>
-        <div class="container">
+        <div class="container-fluid">
 
           <div id="instafeed" class="row gallery"></div>
 
