--- a/index.html
+++ b/index.html
@@ -52,9 +52,6 @@
             <li class="nav-item">
               <a class="nav-link nav-hide" href="#content4">Contacto</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link nav-hide" href="#map">Mapa</a>
-            </li>
           </ul>
         </div>
       </nav>
@@ -68,10 +65,12 @@
       <div id="content1">
         <h1 id="titulo" class="ml-5 mr-5">Sobre Nosotros</h1>
         <div class="photo"></div>
-        <p class="arti ml-5 pl-5 mr-5 pr-5">Somos una empresa de reconocido prestigio en nuestro sector.</p>
-        <p class="arti ml-5 pl-5 mr-5 pr-5">Te ofrecemos una amplia gama de productos y servicios a unos precios muy competitivos y de la máxima calidad respaldados por un equipo que se caracteriza por su trato cordial y espíritu de servicio.</p>
-        <p class="arti ml-5 pl-5 mr-5 pr-5">Nos encantará mostrarte todas las posibilidades y opciones a tu disposición, estamos convencidos de que encontrarás lo que estás buscando.</p>
-        <p class="arti ml-5 pl-5 mr-5 pr-5">La meta principal de nuestra empresa es, sin duda, poder satisfacer todas las necesidades de nuestros clientes.</p>
+        <div>
+          <p class="arti ml-5 pl-5 mr-5 pr-5">Somos una empresa de reconocido prestigio en nuestro sector.</p>
+          <p class="arti ml-5 pl-5 mr-5 pr-5">Te ofrecemos una amplia gama de productos y servicios a unos precios muy competitivos y de la máxima calidad respaldados por un equipo que se caracteriza por su trato cordial y espíritu de servicio.</p>
+          <p class="arti ml-5 pl-5 mr-5 pr-5">Nos encantará mostrarte todas las posibilidades y opciones a tu disposición, estamos convencidos de que encontrarás lo que estás buscando.</p>
+          <p class="arti ml-5 pl-5 mr-5 pr-5">La meta principal de nuestra empresa es, sin duda, poder satisfacer todas las necesidades de nuestros clientes.</p>
+        </div>
       </div>
       <div id="content11" class="align-items-center">
         <h1 id="titulo" class="ml-5 mr-5">Nuestro Equipo</h1>
@@ -109,32 +108,32 @@
       <div id="content21">
         <h1 id="titulo">Marcos</h1>
         <div class="photo"></div>
-        <h3 class="arti">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</h3>
+        <p class="arti">En nuestra pagina se encuentra una selección muy grande de marcos en distintos formatos y materiales. Mire nuestra oferta variada y encuentre el marco que se queda lo mejor con su proyecto. No importa si busca un marco de madera, de aluminio o de plástico, un marco clássico o de estilo barroco, para cada occasión y cada deseo tenemos el marco que hace para Usted. Marcos para fotos, bastidores y paspartú están naturalmente a su disposición. Con el buen marco su imagen se convierte en una obra de arte.</p>
       </div>
       <div id="content22">
         <h1 id="titulo">Cristales</h1>
         <div class="photo"></div>
-        <h3 class="arti">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</h3>
+        <p class="arti">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
       </div>
       <div id="content23">
         <h1 id="titulo">Aluminios</h1>
         <div class="photo"></div>
-        <h3 class="arti">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</h3>
+        <p class="arti">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
       </div>
       <div id="content24">
         <h1 id="titulo">Persianas</h1>
         <div class="photo"></div>
-        <h3 class="arti">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</h3>
+        <p class="arti">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
       </div>
       <div id="content3">
         <h1 id="titulo">Servicios</h1>
         <div class="photo"></div>
-        <h3 class="arti">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</h3>
+        <p class="arti">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
       </div>
       <div id="content4">
         <h1 id="titulo">Contacto</h1>
         <div id="map"></div>
-        <h3 class="arti">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</h3>
+        <p class="arti">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
       </div>
       <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCtlEVbXTCyt11CEYuti_zCpYi3_lV-aXY&callback=initMap"
     async defer></script>
