Margins and padding

--- a/index.html
+++ b/index.html
@@ -111,28 +111,28 @@
           </div>
         </div>
       </div>
-      <div id="content12" class="align-items-center ml-5 mr-5">
-        <h2 id="titulo">Nuestros Proyectos</h2>
+      <div id="content12" class="align-items-center ">
+        <h2 id="titulo" class="ml-5 mr-5">Nuestros Proyectos</h2>
         <div class="container-fluid">
 
-          <div id="instafeed" class="row gallery"></div>
+          <div id="instafeed" class="row gallery ml-5 mr-5"></div>
 
         </div>
       </div>
-      <div id="content21">
-        <h1 id="titulo">Marcos</h1>
+      <div id="content21" class="align-items-center">
+        <h1 id="titulo" class="ml-5 mr-5">Marcos</h1>
         <div class="photo"></div>
-        <p class="arti">En nuestra pagina se encuentra una selección muy grande de marcos en distintos formatos y materiales. Mire nuestra oferta variada y encuentre el marco que se queda lo mejor con su proyecto. No importa si busca un marco de madera, de aluminio o de plástico, un marco clássico o de estilo barroco, para cada occasión y cada deseo tenemos el marco que hace para Usted. Marcos para fotos, bastidores y paspartú están naturalmente a su disposición. Con el buen marco su imagen se convierte en una obra de arte.</p>
+        <p class="arti ml-5 pl-5 mr-5 pr-5">En nuestra pagina se encuentra una selección muy grande de marcos en distintos formatos y materiales. Mire nuestra oferta variada y encuentre el marco que se queda lo mejor con su proyecto. No importa si busca un marco de madera, de aluminio o de plástico, un marco clássico o de estilo barroco, para cada occasión y cada deseo tenemos el marco que hace para Usted. Marcos para fotos, bastidores y paspartú están naturalmente a su disposición. Con el buen marco su imagen se convierte en una obra de arte.</p>
       </div>
       <div id="content22">
-        <h1 id="titulo">Cristales</h1>
+        <h1 id="titulo" class="ml-5 mr-5">Cristales</h1>
         <div class="photo"></div>
-        <p class="arti">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+        <p class="arti ml-5 pl-5 mr-5 pr-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
       </div>
       <div id="content23">
-        <h1 id="titulo">Aluminios</h1>
+        <h1 id="titulo" class="ml-5 mr-5">Aluminios</h1>
         <div class="photo"></div>
-        <p class="arti">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+        <p class="arti ml-5 pl-5 mr-5 pr-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
       </div>
       <!-- Swiper -->
         <div class="swiper-container">
@@ -174,20 +174,20 @@
     });
   </script>
       <div id="content24">
-        <h1 id="titulo">Persianas</h1>
+        <h1 id="titulo" class="ml-5 mr-5">Persianas</h1>
         <div class="photo"></div>
-        <p class="arti">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+        <p class="arti ml-5 pl-5 mr-5 pr-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
       </div>
       <div id="content3">
-        <h1 id="titulo">Servicios</h1>
+        <h1 id="titulo" class="ml-5 mr-5">Servicios</h1>
         <div class="photo"></div>
-        <p class="arti">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+        <p class="arti ml-5 pl-5 mr-5 pr-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
       </div>
       <div id="content4">
-        <h1 id="titulo">Contacto</h1>
+        <h1 id="titulo" class="ml-5 mr-5">Contacto</h1>
         <div id="map"></div>
-        <p class="arti">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-      </div>
+        <p class="arti ml-5 pl-5 mr-5 pr-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+      </div>  
       <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCtlEVbXTCyt11CEYuti_zCpYi3_lV-aXY&callback=initMap"
     async defer></script>
       <footer> Lumarc todos los derechos reservados </footer>
