--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="css/swiper.min.css">
     <script src="js/jquery.js"></script>
     <script src="bootstrap/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="css/prebootstrap.css">
     <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="css/magnific.css">
     <link rel="stylesheet" href="css/styles.css">
@@ -196,6 +195,11 @@
               <p><b>Teléfono</b> 977 36 59 21</p>
               <br>
               <strong>Horario:</strong>
+              <p>Lunes a viernes: <i>9:00-13:00 y 16:00-20:00</i></p>
+              <p>Sábado: <i>9:00-13:00</i></p>
+              <br>
+              <strong>Horario de agosto:</strong>
+              <p>Lunes a sábado: <i>9:00-13:00</i></p>
             </div>
           </div>
           <div class="column" id="column2">
