--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Lumarc</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="/images/logo-black-icon.png">
     <link rel="stylesheet" href="css/swiper.min.css">
     <script src="js/jquery.js"></script>
     <script src="bootstrap/js/bootstrap.min.js"></script>
