--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/swiper.min.css">
     <script src="js/jquery.js"></script>
     <script src="bootstrap/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="css/magnific.css">
     <link rel="stylesheet" href="css/styles.css">
@@ -203,6 +204,8 @@
               <br>
               <p class="negrita">Horario de agosto:</p>
               <p>Lunes a sábado: <i>9:00-13:00</i></p>
+              <p class="negrita">Redes sociales:</p>
+              <p class = "redes"><i class="fab fa-instagram"></i>  <i class="fab fa-facebook"></i>  <i class="fab fa-linkedin"></i></p>
             </div>
           </div>
           <div class="column" id="column2">
@@ -214,7 +217,7 @@
       </div>
       <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCtlEVbXTCyt11CEYuti_zCpYi3_lV-aXY&callback=initMap"
     async defer></script>
-      <footer class="page-footer font-small bg-dark darken-3"> Lumarc todos los derechos reservados </footer>
+      <footer class="pie bg-dark darken-3 "> <p class = "lumarc">®Lumarc Cambrils S.L. | <a href="AvisoLegal.html">Aviso Legal</a></p><p class = "redes"><i class="far fa-envelope"></i> <i class="fab fa-instagram"></i>  <i class="fab fa-facebook"></i>  <i class="fab fa-linkedin"></i></p></footer>
 
   </body>
 </html>
